gen_inv.log
  File "/app/scripts/generate_investment_ecosystem.py", line 14
    with open(os.path.join(DATA_DIR, 'sp500_market_data.json'), 'r') asf:
                                                                     ^^^
SyntaxError: invalid syntax
